vlib/v/checker/tests/orm_multiple_pkeys.vv
import db.sqlite

struct Person {
	id   int    @[primary]
	name string @[primary]
}

fn main() {
	db := sqlite.connect(':memory:')!
	_ := sql db {
		select from Person
	}!
}
